--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A babel plugin work for b-rc and b-rc-m",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "nodemon ./examples/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,15 +27,13 @@
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.6.1",
-    "webpack": "^4.8.1",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "nodemon": "^1.17.4"
   },
   "dependencies": {
-    "babel-loader": "^7.1.4",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
     "babel-traverse": "^6.26.0",
     "babel-types": "^6.26.0",
-    "babylon": "^6.18.0",
     "html-webpack-plugin": "^3.2.0"
   }
 }
