--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "nodemon": "^1.17.4"
   },
   "dependencies": {
+    "babel-generator": "^6.26.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "babel-template": "^6.26.0",
     "babel-traverse": "^6.26.0",
     "babel-types": "^6.26.0",
     "html-webpack-plugin": "^3.2.0"
