--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-b-rc",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "A babel plugin work for b-rc and b-rc-m",
   "main": "lib/index.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "nodemon": "^1.17.4"
   },
   "dependencies": {
+    "@babel/helper-module-imports": "^7.0.0-beta.46",
     "babel-generator": "^6.26.1",
     "babel-register": "^6.26.0",
     "babel-template": "^6.26.0",
